# clientsession

./: .gitignore  ChangeLog.md  LICENSE  README.md  clientsession.cabal  runtests.hs  stack.yaml
Codec/Encryption/: AES.hs  AESAux.hs  Xor.hs
Web/: ClientSession.hs
c/: aestable.c  helper.c  xor.c
src/System/: LookupEnv.hs
src/Web/: ClientSession.hs
tests/: runtests.hs
