name:            clientsession
version:         0.7.3.5
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>, Felipe Lessa <felipe.lessa@gmail.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Securely store session data in a client-side cookie.
description:     Achieves security through AES-CTR encryption and
                 Skein-MAC-512-256 authentication.  Uses Base64
                 encoding to avoid any issues with characters.
category:        Web
stability:       stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/snoyberg/clientsession/tree/master
data-files:      bench.hs
extra-source-files: tests/runtests.hs

flag test
  description: Build the executable to run unit tests
  default: False

library
    build-depends:   base                >=4           && < 5
                   , bytestring          >= 0.9        && < 0.10
                   , cereal              >= 0.3        && < 0.4
                   , directory           >= 1          && < 1.2
                   , crypto-api          >= 0.6.4      && < 0.9
                   , cryptocipher        >= 0.2.5
                   , skein               >= 0.1        && < 0.2
                   , base64-bytestring   >= 0.1.0.3    && < 0.2
                   , entropy             >= 0.2.1
                   , cprng-aes           >= 0.2
    exposed-modules: Web.ClientSession
    ghc-options:     -Wall
    hs-source-dirs:  src

test-suite runtests
    type: exitcode-stdio-1.0
    build-depends:   base                >=4           && < 5
                   , bytestring          >= 0.9        && < 0.10
                   , cryptocipher        >= 0.2.5      && < 0.3
                   , hspec               >= 0.6        && < 0.10
                   , QuickCheck          >= 2          && < 3
                   , HUnit
                   , transformers
                   , containers
                   -- finally, our own package
                   , clientsession
    ghc-options:     -Wall
    hs-source-dirs:  tests
    main-is:         runtests.hs

source-repository head
  type:     git
  location: git://github.com/snoyberg/clientsession.git
